--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@octokit/rest": "^20.0.2",
     "discord.js": "^14.14.1",
-    "lxrbckl": "^6.5.0"
+    "lxrbckl": "^6.5.0",
+    "node-cron": "^3.0.3"
   }
 }
